# ohos_web_demo

./: README.md  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: module.json5
entry/src/main/ets/components/: ArkWebJSBridge.ts  RawfileServer.ets  WebComponent.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/rawfile/: local.html
entry/src/main/resources/rawfile/pkg/: rust_hello_wasm.js  rust_hello_wasm_bg.wasm
rust_hello_wasm/: .gitignore  Cargo.toml  build_wasm
rust_hello_wasm/src/: lib.rs
